--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   node: circleci/node@5.0.0
 
 jobs:
-  build_and_test:
+  build:
     docker:
       - image: cimg/node:16.7.0
     steps:
@@ -11,7 +11,7 @@ jobs:
       - node/install-packages:
           pkg-manager: npm
       - run:
-          command: npm build
+          command: npm run build
           name: Build app
       - persist_to_workspace:
           root: ~/project
