--- a/corbal-react-app/package.json
+++ b/corbal-react-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -16,6 +17,7 @@
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
@@ -40,7 +42,6 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "bootstrap-icons": "^1.8.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
