Attempting to update CI env variable to ignore warnings

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - checkout
       - run:
           command: |
+            export CI = false
             npm install
             npm run build
           name: Build app
