adding CI=false to npm build command

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-export CI = false;
+# TODO: We should edit other places in the app to use a global API variable from the environment:
+API_URL='https://artistlaunch-api.herokuapp.com/';
